--- a/roles/ssh/ssh_config.tmpl
+++ b/roles/ssh/ssh_config.tmpl
@@ -1,9 +1,9 @@
 {{ if getenv "MW_BASTION_HOST" }}
 Host bastion
-    User centos
+    User {{ getenv "MW_BASTION_USER" }}
     HostName {{ getenv "MW_BASTION_HOST" }}
 
-Host 10.61.144.* 10.61.145.*
+Host {{ replace (getenv "MW_BASTION_SUBNETS") "," " " -1 }}
     ProxyCommand ssh -W %h:%p -q centos@bastion
 {{ end }}
 
@@ -15,7 +15,6 @@ Host *
   ControlPath ~/.ssh/ansible-%r@%h:%p
   ControlPersist 5m
   PreferredAuthentications publickey,keyboard-interactive,password,hostbased,gssapi-with-mic
-  {{getenv "MW_PROXY_HOST"}}
 {{ if getenv "MW_PROXY_HOST" }}
   ProxyCommand /usr/local/bin/corkscrew {{ getenv "MW_PROXY_HOST" }} {{ getenv "MW_PROXY_PORT" }} %h %p
 {{ end }}
